# paper-admin

./: .babelrc  .browserslistrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  postcss.config.cjs  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox-requirements.txt  tox.ini  webpack.config.js
.github/workflows/: codeql-analysis.yml  release.yml  tests.yml
.run/: paper-admin.run.xml
docs/: modals.md  widgets.md
paper_admin/: __init__.py  apps.py  conf.py  forms.py  menu.py  monkey_patch.py  renderer.py  widgets.py
paper_admin/admin/: __init__.py  changelist.py  filters.py  forms.py  helpers.py  logentry.py  options.py  renderers.py  sortable.py  views.py  widgets.py
paper_admin/admin/renderer/: options.py
paper_admin/admin/sortable/: changelist.py  helpers.py  options.py
paper_admin/admin/tabs/: __init__.py  options.py
paper_admin/admin/widgets/: __init__.py  options.py  widgets.py
paper_admin/forms/: fields.py  renderers.py  widgets.py
paper_admin/patches/: formfield_defaults.py
paper_admin/patches/dal/: __init__.py  apps.py  widgets.py
paper_admin/patches/django/: __init__.py  changelist.py  filters.py  forms.py  helpers.py  options.py  sites.py
paper_admin/patches/django_money/: __init__.py  apps.py  widgets.py
paper_admin/patches/logentry_admin/: __init__.py  admin.py  apps.py
paper_admin/patches/mptt/: __init__.py  admin.py  apps.py
paper_admin/patches/post_office/: __init__.py  admin.py  apps.py
paper_admin/patches/tree_queries/: __init__.py  admin.py  apps.py  forms.py
paper_admin/templates/admin/: actions.html  app_index.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  invalid_setup.html  login.html  object_history.html  pagination.html  popup_response.html  prepopulated_fields_js.html  search_form.html
paper_admin/templates/paper_admin/: .gitignore  _menu.html  environment.html  footer.html  form_includes.html  header_buttons.html  menu.html  toolbar_buttons.html
paper_admin/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email_alt.html  password_reset_form.html
paper_admin/templatetags/: load_paper.py  paper_filters.py  paper_list.py  paper_menu.py  paper_modify.py  paper_paginator.py  paper_styles.py
tests/: .gitignore  fixtures.json  requirements.txt  settings.py  urls.py  wsgi.py
tests/app/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
tests/app/admin/: __init__.py  filters.py  includes.py  inlines.py  mptt.py  singleton.py  standard.py  tag.py  tree_queries.py  widgets.py
tests/app/migrations/: 0001_initial.py  0002_auto_20200915_0929.py  0002_auto_20210521_1116.py  0002_person.py  0003_auto_20210521_1138.py  0003_pet.py  0003_sigletonexample.py  0004_alter_pet_options_widgets_f_money_and_more.py  0004_auto_20200916_0728.py  0004_auto_20210526_1310.py  0005_alter_widgets_f_money_currency.py  0005_auto_20210224_0924.py  0005_remove_tree_category.py  0006_auto_20210404_1858.py  0006_auto_20210818_0930.py  0006_message_rating_alter_message_sender_and_more.py  0007_auto_20210825_0553.py  0007_item_visible.py  0007_message_edited_alter_message_sender_and_more.py  0008_alter_message_sender.py  0008_item_age.py  0008_remove_category_f_nullbool.py  0009_alter_category_f_decimal.py  0009_auto_20240525_1004.py  0009_item_created_at.py  0010_category_status_alter_category_dal_m2m_and_more.py  0011_item_status_alter_category_dal_m2m_and_more.py  0012_alter_category_dal_m2m_alter_category_f_int_choices2_and_more.py  0013_alter_category_f_int_choices2.py  0014_alter_category_f_fk.py  0015_widgets.py  0016_rename_sigletonexample_sigleton_and_more.py  0017_author_book_alter_widgets_f_file_input_review_and_more.py  0018_alter_bookauthor_options_remove_bookauthor_order.py  0019_alter_book_options_review_rating.py  0020_group_user_alter_review_rating_message_group_members.py  0021_alter_group_members_alter_message_text.py  0022_alter_message_created_at.py  0023_remove_item_category_delete_category_delete_item.py
tests/app/models/: __init__.py  filters.py  includes.py  inlines.py  mptt.py  singleton.py  standard.py  tag.py  tree_queries.py  widgets.py
tests/app/views/: __init__.py  autocomplete.py
tests/sortables/: admin.py  models.py
tests/sortables/migrations/: 0001_initial.py  0002_auto_20210521_0834.py  0003_company_order.py  0005_category.py  (+8 more)
tests/users/: admin.py
(+459 files in other folders)
