[metadata]
name = paper-admin
version = attr: paper_admin.__version__
description = Custom Django admin interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/paper-admin
license = BSD
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Development Status :: 3 - Alpha
  Framework :: Django
  Framework :: Django :: 2.1
  Framework :: Django :: 2.2
  Framework :: Django :: 3.0
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Internet :: WWW/HTTP

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
install_requires =
  Django >= 2.1, < 3.1
packages = find:

[options.extras_require]
all =
  django-solo > 1.1, < 2.0
  django-mptt > 0.9, < 1.0
testing =
  django
  Pillow
  pytest
  pytest-django
  pytest-env
  pytest-cov
  pytest-xdist

[flake8]
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude =
  .git
  .tox
  .eggs
  .venv
  __pycache__
  migrations
  build/
  dist/

# Things to ignore:
#   E128: continuation line under-indented (too noisy)
#   W503: line break before binary operator
#   W601: has_key() deprecated (false positives)
#   B011: Don't use assert False
ignore = E128,W503,W601,B011

[mypy]
files = paper_admin
ignore_missing_imports = true
check_untyped_defs = True
ignore_errors = False
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[mypy-server.*.migrations.*]
ignore_errors = True

[coverage:run]
source = paper_admin
omit =
  */apps.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover

  # Don't complain about missing debug-only code:
  def __repr__
  if self\.debug

  # Don't complain if tests don't hit defensive assertion code:
  raise AssertionError
  raise NotImplementedError

  # Don't complain if non-runnable code isn't run:
  if 0:
  if __name__ == .__main__.:

[tool:isort]
line_length = 88
multi_line_output = 3
use_parentheses = True
include_trailing_comma = True
skip = .venv,.tox,node_modules,migrations
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
addopts = --showlocals -rfs
norecursedirs =
  dist
  build
  .tox
