[metadata]
name = paper-admin
version = attr: paper_admin.__version__
description = Custom Django admin interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dldevinc/paper-admin
license = BSD license
author = Mihail Mishakin
author_email = x896321475@gmail.com
maintainer = Mihail Mishakin
maintainer_email = x896321475@gmail.com
platforms = OS Independent
classifiers =
  Intended Audience :: Developers
  Development Status :: 3 - Alpha
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Framework :: Django :: 2.2
  Framework :: Django :: 3.0
  Framework :: Django :: 3.1
  Framework :: Django :: 3.2
  Framework :: Django :: 4.0
  Framework :: Django :: 4.1
  Framework :: Django :: 4.2
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries :: Python Modules

[bdist_wheel]
universal = 1

[options]
zip_safe = false
python_requires = >= 3.7
include_package_data = true
install_requires =
  Django>=2.2
  Pillow
  anytree
packages = find_namespace:

[options.packages.find]
exclude =
  tests
  tests.*

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 90
known_first_party = app

[flake8]
max-line-length = 90
max-complexity = 10
exclude =
  migrations/
  tests/
per-file-ignores =
  # imported but unused
  __init__.py: F401
  apps.py : F401
ignore =
  # Line too long
  E501
  # Continuation line under-indented for visual indent
  E128
  # Line break after binary operator
  W503
  W504
  # Function is too complex
  C901

[mypy]
files = paper_admin
strict_optional = False
check_untyped_defs = True
allow_redefinition = True
pretty = True


